--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 			<div class="row justify-content-center mt-5">
 				<div class="col-md-6 text-center ftco-animate">
 				  <p><a href="https://github.com/yashbthakkar/resume/blob/main/Yash-B-Thakkar.pdf" class="btn btn-primary py-4 px-5" download>Download CV as PDF</a></p>
-				  <!-- <p><a href="path/to/your/resume.html" class="btn btn-secondary py-4 px-5" target="_blank">View CV as HTML</a></p> -->
+				  <!-- <p><a href="https://github.com/yashbthakkar/resume/blob/main/resume.html" class="btn btn-secondary py-4 px-5" target="_blank">View CV as HTML</a></p> -->
 				</div>
 			  </div>			  
     			</div>
