--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yash Bharat Thakkar - Resume</title>
+    <title>Yash Bharat Thakkar - Resume!</title>
     <style>
         body {
             font-family: Arial, sans-serif;
